# discord-translate-bot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml  test.yml
src/: commands.rs  config.rs  embeds.rs  events.rs  interactions.rs  main.rs  models.rs  services.rs
src/commands/: translate_text.rs
src/config/: configuration.rs
src/embeds/: error.rs  translation.rs
src/events/: event_handler.rs  help_message_event.rs  register_message_event.rs  translate_message_event.rs  unregister_message_event.rs
src/interactions/: translate_text_interaction.rs
src/models/: config_error.rs  google_translate_error.rs
src/services/: google_translate_service.rs
